--- a/kasper-api/pyproject.toml
+++ b/kasper-api/pyproject.toml
@@ -21,6 +21,7 @@ bs4 = "^0.0.1"
 lxml = "^4.9.2"
 fastapi-utils = "^0.2.1"
 jinja2 = "^3.1.2"
+fastapi-admin = "^1.0.4"
 
 [build-system]
 requires = ["poetry-core"]
