--- a/kasper-api/pyproject.toml
+++ b/kasper-api/pyproject.toml
@@ -8,7 +8,7 @@ packages = [{include = "scripts"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-fastapi = "^0.87.0"
+fastapi = "^0.104.1"
 alembic = "^1.8.1"
 uvicorn = "^0.19.0"
 ormar = "^0.12.0"
@@ -22,6 +22,7 @@ lxml = "^4.9.2"
 fastapi-utils = "^0.2.1"
 jinja2 = "^3.1.2"
 fastapi-admin = "^1.0.4"
+fastapi-pagination = "^0.12.12"
 
 [build-system]
 requires = ["poetry-core"]
